src/objects/User_History__c.object
<CustomObject>
    <fields>
        <fullName>ApiName__c</fullName>
        <label>ApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Tracking_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What__c</fullName>
        <label>What</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User History</label>
    <nameField>
        <displayFormat>UH-{00000000}</displayFormat>
        <label>User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>